--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
+    "graphql-date": "^1.0.3",
     "graphql-tools": "^2.8.0",
     "mongoose": "^4.13.4"
   },
