--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -7,14 +7,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-client": "1.9.0-0",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-apollo": "1.4.8",
+    "react-native": "0.51.0",
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.4"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.12.1",
+    "eslint-config-equimper": "^2.2.1",
+    "flow-bin": "0.59.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "jest": {
     "preset": "react-native"
