--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apollo-client": "1.9.0-0",
+    "date-fns": "^1.29.0",
     "react": "16.0.0",
     "react-apollo": "1.4.8",
     "react-native": "0.51.0",
