--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0",
     "react-apollo": "1.4.8",
     "react-native": "0.51.0",
+    "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
