--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "https://github.com/xcarpentier/react-native-action-sheet",
     "apollo-client": "1.9.0-0",
     "date-fns": "^1.29.0",
     "react": "16.0.0",
