--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "graphql-date": "^1.0.3",
     "graphql-tools": "^2.8.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.4"
+    "mongoose": "^4.13.4",
+    "subscriptions-transport-ws": "^0.9.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
