--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-date": "^1.0.3",
+    "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.8.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.4",
