--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.4"
+    "styled-components": "^2.2.4",
+    "subscriptions-transport-ws": "0.8.3"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
