--- a/TwitterApp/package.json
+++ b/TwitterApp/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "rn-placeholder": "1.0.0",
     "styled-components": "^2.2.4",
     "subscriptions-transport-ws": "0.8.3"
   },
